--- a/styles/style.css
+++ b/styles/style.css
@@ -29,15 +29,15 @@
   background-image: var(
     --bg-image-gradient,
     repeating-linear-gradient(
-      to right,
-      #d3d3d3 0px,
+      to top,
+      #d3d3d3 0,
       #d3d3d3 2px,
       transparent 2px,
       transparent 4px
     ),
     repeating-linear-gradient(
-      to bottom,
-      #d3d3d3 0px,
+      to right,
+      #d3d3d3 0,
       #d3d3d3 2px,
       transparent 2px,
       transparent 4px
@@ -56,7 +56,7 @@
 }
 
 .header__title {
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   font-variation-settings: "wght" var(--font-weight-min, 400);
   line-height: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
@@ -68,7 +68,7 @@
 }
 
 .header__subtitle {
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   font-variation-settings: "wght" var(--font-weight-min, 400);
   line-height: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
@@ -93,7 +93,7 @@
 }
 
 .theme-menu__item {
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
@@ -104,7 +104,7 @@
   user-select: none;
   text-transform: uppercase;
   background-color: transparent;
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   border: none;
   padding: 0;
   font-weight: 400;
@@ -197,6 +197,7 @@
   mix-blend-mode: difference;
   z-index: 1;
   color: var(--button-color, #fff);
+  cursor: pointer;
 }
 
 .section__block {
@@ -222,6 +223,7 @@
 .card__image {
   display: block;
   inline-size: 100%;
+  min-block-size: 371px;
 }
 
 .card__image-block {
@@ -234,7 +236,7 @@
   inset-block-start: 0;
   inset-inline-end: 0;
   opacity: 0.5;
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: 14px;
   font-variation-settings: "wght" var(--font-weight-min, 400);
   line-height: 14px;
@@ -247,7 +249,9 @@
 
 @supports (-webkit-text-stroke: 1px var(--bg-color, #fff)) {
   .card__watermark {
+    text-shadow: none;
     -webkit-text-stroke: 1px var(--bg-color, #fff);
+    text-stroke: 1px var(--bg-color, #fff);
   }
 }
 
@@ -259,11 +263,14 @@
 }
 
 .card__like-button {
-  padding: 10.5px 35px;
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  min-block-size: 38px;
+  min-inline-size: 130px;
+  padding-block: 7px;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: 14px;
   font-variation-settings: "wght" var(--font-weight-min, 400);
   line-height: 12.6px;
+  cursor: pointer;
 }
 
 .card__text:not(:last-of-type) {
@@ -284,6 +291,7 @@
   background-color: transparent;
   line-height: 12.6px;
   transition: border 0.3s ease;
+  cursor: pointer;
 }
 
 .card__icon-button:focus {
@@ -296,24 +304,22 @@
 
 .card__icon-button:hover .main-body {
   fill: var(--contour, #000);
-  transition: fill 0.3s 0s linear;
+  transition: fill 0.3s 0.05s linear;
 }
 
 .card__icon-button:hover .core {
   fill: var(--contour, #000);
   transition: fill 0.3s linear;
-  transition-duration: 0.03s;
 }
 
 .card__icon-button:active .core {
   fill: var(--sparks, #ff0000);
   transition: fill 0.3s linear;
-  transition-duration: 0.03s;
 }
 
 .card__icon-button:active .main-body {
   fill: var(--sparks, #ff0000);
-  transition: fill 0.3s 0s linear;
+  transition: fill 0.3s 0.05s linear;
 }
 
 .like-icon.is-liked .core {
@@ -323,7 +329,7 @@
 
 .like-icon.is-liked .main-body {
   fill: var(--sparks, #ff0000);
-  transition: fill 0.3s linear;
+  transition: fill 0.3s 0.05s linear;
 }
 
 .like-icon.is-liked .contour {
@@ -352,28 +358,28 @@
 
 .core {
   transition: fill 0.3s linear;
+  transition-duration: 0.03s;
 }
 
 .main-body {
   transition: fill 0.3s linear;
-  transition-duration: 0.05s;
 }
 
 .contour {
   transition: fill 0.1s linear;
 }
 
-.footer {
+.memory {
   margin: 48px 0 103px 0;
   display: flex;
   justify-content: center;
 }
 
-.footer__button {
+.memory__button {
   display: flex;
   gap: 8px;
   padding: 15px 21px 15px 19px;
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: 14px;
   font-variation-settings: "wght" var(--font-weight-min, 400);
   line-height: 12.6px;
@@ -381,9 +387,10 @@
   align-items: center;
   color: var(--button-color, #fff);
   background-color: var(--bg-color, #fff);
+  cursor: pointer;
 }
 
-.footer__button-icon {
+.memory__button-icon {
   mix-blend-mode: difference;
   fill: var(--button-color);
   stroke: var(--button-color);
@@ -415,23 +422,25 @@ dialog::backdrop {
 
 .dialog__title {
   text-transform: uppercase;
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
 }
 
 .dialog__button {
-  font-family: var(--accent-font, sans-serif), sans-serif;
+  font-family: var(--accent-font, fantasy), fantasy;
   font-size: 14px;
   font-weight: 400;
   line-height: 12.6px;
   padding: 12.5px 0;
   inline-size: 100%;
+  cursor: pointer;
 }
 
 .dialog__close {
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .dialog__button-icon {
@@ -493,11 +502,15 @@ dialog::backdrop {
     padding: 29px 25px 24.4px;
   }
 
-  .footer__button {
+  .card__watermark {
+    padding: 23px 9px;
+  }
+
+  .memory__button {
     flex-direction: column;
   }
 
-  .footer__button-icon {
+  .memory__button-icon {
     width: 30px;
     height: 30px;
   }
