--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   background-image: var(
     --bg-image-gradient,
     repeating-linear-gradient(
@@ -250,8 +251,7 @@
 @supports (-webkit-text-stroke: 1px var(--bg-color, #fff)) {
   .card__watermark {
     text-shadow: none;
-    -webkit-text-stroke: 1px var(--bg-color, #fff);
-    text-stroke: 1px var(--bg-color, #fff);
+    -webkit-text-stroke: 1px var(--bg-color, #fff);    
   }
 }
 
